--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "core-js": "^3.20.2",
     "phaser": "^3.55.2",
     "register-service-worker": "^1.7.2",
+    "twemoji": "^13.1.0",
     "vue": "^2.6.14",
+    "vue-masonry": "0.13.0",
     "vue-router": "^3.5.3",
     "vuetify": "^2.6.2",
     "vuex": "^3.6.2"
